--- a/code/quicklook.ini
+++ b/code/quicklook.ini
@@ -10,10 +10,10 @@ saveramp : True
 
 [Calib]
 # Location of original calibration files
-calibdir : /path/to/calibration/files/
+calibdir : /home/mrclean/code/calibrations/
 # Folder where the new calibration sets are kept
 # for each new monochromatic flat, a folder will be created within this folder
-outdir : /path/to/new/calibration/files/
+outdir : /home/mrclean/calibdir/
 # Mask bad pixels using a mask in calibdir?
 mask : True
 # Apply flatfields to correct pixel-to-pixel sensitivity variations
