Deleted reference to the 'extract' method in quickly

--- a/code/quicklook.ini
+++ b/code/quicklook.ini
@@ -28,8 +28,8 @@ R_lowres : 30
 R_hires : 100
 # Method of extraction, lstsq strongly preferred.  Other choice is optext
 smoothandmask : True
-# Save the residuals of the 2D image as a separate FITS file?  This
-# keyword does nothing unless method == 'lstsq'
+# Maximum threads for parallelization.  
+# Negative: leave that many threads free.  None: use number of cpus.
 maxcpus : None
 # Save the inverse variance?
 saveivar : False
