Added ability to set the output folder

--- a/code/quicklook.ini
+++ b/code/quicklook.ini
@@ -14,6 +14,8 @@ calibdir : /home/mrclean/quicklook/code/calibrations/
 # Folder where the new calibration sets are kept
 # for each new monochromatic flat, a folder will be created within this folder
 outdir : /home/mrclean/calibdir/
+# Folder where the new cubes will exist
+outdircube : /home/mrclean/quicklook_reduced/
 # Mask bad pixels using a mask in calibdir?
 mask : True
 # Apply flatfields to correct pixel-to-pixel sensitivity variations
