Added WCS parameters in quicklook.ini

--- a/code/quicklook.ini
+++ b/code/quicklook.ini
@@ -37,3 +37,11 @@ maxcpus : None
 saveivar : False
 # Number of pixels per PSFlet for Gaussian fitting
 sig : 2
+# X pixscale in arcsec
+xpixscale : -0.015
+# Y pixscale in arcsec
+ypixscale : 0.015
+# Extra angular offset (degrees)
+extrarot : 113
+# Overall sign of angular rotation
+angle_sign : 1
