Added centroiding and more text outputs for saturation

--- a/code/quicklook.ini
+++ b/code/quicklook.ini
@@ -32,7 +32,7 @@ R_hires : 100
 smoothandmask : True
 # Maximum threads for parallelization.  
 # Negative: leave that many threads free.  None: use number of cpus.
-maxcpus : None
+maxcpus : 2
 # Save the inverse variance?
 saveivar : False
 # Number of pixels per PSFlet for Gaussian fitting
