Corrected plate scale for WCS; added keywords for plotting

--- a/code/quicklook.ini
+++ b/code/quicklook.ini
@@ -35,13 +35,7 @@ smoothandmask : True
 maxcpus : 2
 # Save the inverse variance?
 saveivar : False
-# Number of pixels per PSFlet for Gaussian fitting
-sig : 2
-# X pixscale in arcsec
-xpixscale : 0.015
-# Y pixscale in arcsec
-ypixscale : 0.015
-# Extra angular offset (degrees)
-extrarot : 113
-# Overall sign of angular rotation
-angle_sign : -1
+# Align cube to WCS?
+alignWCS : True
+# Plot annulus?
+plotAnnulus : True
