Default alignWCS is False

--- a/code/quicklook.ini
+++ b/code/quicklook.ini
@@ -36,6 +36,6 @@ maxcpus : 2
 # Save the inverse variance?
 saveivar : False
 # Align cube to WCS?
-alignWCS : True
+alignWCS : False
 # Plot annulus?
 plotAnnulus : True
